@@ -16,6 +16,7 @@ FCN_FILE_DIRS += %reldir%
   %reldir%/atan2d.m \
   %reldir%/atand.m \
   %reldir%/cosd.m \
+  %reldir%/cospi.m \
   %reldir%/cot.m \
   %reldir%/cotd.m \
   %reldir%/coth.m \
@@ -26,6 +27,7 @@ FCN_FILE_DIRS += %reldir%
   %reldir%/secd.m \
   %reldir%/sech.m \
   %reldir%/sind.m \
+  %reldir%/sinpi.m \
   %reldir%/tand.m
 
 %canon_reldir%dir = $(fcnfiledir)/elfun
